// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
package connection.protobuf;

enum ProcessState {
  ProcessState_Stopped = 0;
  ProcessState_Running = 2;
  ProcessState_Error = 4;
}
